@@ -23,6 +23,7 @@ To get what's been done so far, checkout the [windows](https://github.com/nschli
 - **Bugfix:** Closes [#141](https://github.com/nschlia/ffmpegfs/issues/141): Improved memory management by allocating several times the average size of allocations far. This prevents obtaining tiny portions over and over again.
   Additionally, after the file is opened, grabbing the entire expected memory block rather than doing a tiny allocation initially, followed by a larger allocation.
 - **Bugfix:** Avoid race condition causing the inter-process semaphore creation to fail for second process.
+- **Bugfix:** Avoid crash during shutdown if cache object had already been closed.
 - **Enhancement:** Record milliseconds for every log event.
 - **Optimisation:** When reopening after invalidating the cache, the size remained at 0. The original size now is once more reserved in order to prevent reallocations. 
 - **Optimisation:** To avoid reallocations, save enough space in the cache buffer to hold the entire frame set.
